tests/snapshots/run_wpt_conformance__coreml_elu_float32_negative_0D_scalar_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "elu.https.any.js",
    "elu float32 negative 0D scalar default options",
    "coreml",
    "PASS",
)
